# weather_routing_pi

./: CMakeLists.txt  README.md  WeatherRouting.fbp  appveyor.yml  bldwin-debug.sh  bldwin-rdeb.bat  bldwin-rdeb.sh  build-win.sh  vcpkg.json  windows-action.md
.circleci/: config.yml  config.yml.bak
.github/workflows/: bldwin32-rdeb.yml
OLD-CPP/: RouteMapOverlay - Copy.cpp.txt  WeatherRouting - Copy02-14-2026.cpp.txt  WeatherRouting.cpp.02-17-2026-end-of-day
OLD-H/: WeatherRouting -Old-just-before-reformat.h.txt  WeatherRouting.h-02-17-2026-end-of-day  WeatherRoutingUI.h
Regen-Formbuild/: weather_routing_piAboutDialogBase.cpp  weather_routing_piAboutDialogBase.h  weather_routing_piBoatDialogBase.cpp  weather_routing_piConfigurationBatchDialogBase.cpp  weather_routing_piConfigurationDialogBase.cpp  weather_routing_piCursorPositionDialog.cpp  weather_routing_piNewPositionDialog.h  weather_routing_piPlotDialogBase.cpp  weather_routing_piPlotDialogBase.h  weather_routing_piReportDialogBase.cpp  weather_routing_piStatisticsDialogBase.cpp  weather_routing_piWeatherRoutingBase.h  weather_routing_piWeatherRoutingPanel.cpp
ci/: circleci-build-android-arm64.sh  circleci-build-android-armhf.sh  circleci-build-macos-universal.sh  circleci-build-macos-universal.sh.bak
cmake/: PluginConfigure.cmake  PluginGL.cmake  PluginJSON.cmake  PluginXML.cmake
cmake/in-files/: cloudsmith-upload.sh.in  cloudsmith-upload.sh.in.bak
github/workflows/: win32-wx32-rdeb.yml
include/: AddressSpaceMonitor.h  AutoStopDialog.h  Boat.h  BoatDialog.h  BoatDialogBase.h  ConfigurationBatchDialog.h  ConfigurationBatchDialogBase.h  ConfigurationDialog.h  ConfigurationDialogBase.h  ConstraintChecker.h  CursorPositionDialog.h  EditPolarDialogBase.h  FilterRoutesDialogBase.h  GribRecord.h  GribRecordSet.h  IsoRoute.h  MemoryStatusDialog.h  PlotDialog.h  Position.h  ReportDialog.h  ReportDialogBase.h  RouteMap.h  RouteMapOverlay.h  RouteMapPanel.h  RoutePoint.h  RoutePositionDialog.h  RoutingTableDialog.h  RoutingTablePanel.h  SettingsDialog - Copy.h.txt  SettingsDialog.h  SettingsDialogBase.h  StatisticsDialog.h  StatisticsDialogBase.h  WRConfigDialog.h  WRPanel.h  WRPositionPanel.h  WeatherDataProvider.h  WeatherRoute.h  WeatherRoute.h-2-15-2026.dup.txt  WeatherRouting - Copy.h-2-15-2026.cpp.txt  (+11 more)
include/OLD/: WeatherRouting - Copy-1-30-2026-endofday.h.txt  WeatherRouting-02-18-2026-BeforeAI rewrite.h.txt  WeatherRouting.h-2-4-2026  WeatherRouting.h-Old-just-before-stripdown02-17-2026.txt  WeatherRouting.h.messedup-02-17-2026.txt  WeatherRoutingUI - Copy.h-02-09-2026.txt
libs/plugingl/: CMakeLists.txt
manual/modules/ROOT/pages/: index.adoc
msvc/: win_deps.bat
po/: POTFILES.in  POTFILES.in.test
src/: AboutDialog.cpp  AddressSpaceMonitor.cpp  AutoStopDialog.cpp  Boat.cpp  BoatDialog.cpp  ConfigurationBatchDialog.cpp  ConfigurationDialog.cpp  ConstraintChecker.cpp  EditPolarDialog.cpp  EditPolarDialogBase.cpp  FilterRoutesDialog.cpp  FilterRoutesDialogBase.cpp  GribRecord.cpp  GribRecord.cpp.AI-revised-4.txt  IsoRoute.cpp  LineBufferOverlay.cpp  MemoryStatusDialog.cpp  NewPositionDialog.cpp  PlotDialog.cpp  Position.cpp  ReportDialog.cpp  RouteMap.cpp  RouteMap.h  RouteMapOverlay.cpp  RouteMapPanel.cpp  RoutePoint.cpp  RoutePositionDialog.cpp  RouteSimplifier.cpp  RoutingTableDialog.cpp  RoutingTablePanel.cpp  SettingsDialog.cpp  SettingsDialogBase.cpp  StatisticsDialog.cpp  WR-diff-1.patch  WRConfigDialog.cpp  WRPanel.cpp  WRPostionPanel.cpp  WeatherDataProvider.cpp  WeatherRoute.cpp  WeatherRouting - Copy-1-30-2026-endofday.cpp.txt  (+17 more)
src/OLD/: WeatherRouting - Copy 02-10-2026.cpp.txt  WeatherRouting-02-18-2026-beforeAI-rewrite.cpp.txt  WeatherRouting.cpp-after-big-AI-revision-02-17-2026.txt
src/plugingl/: pidc.cpp
test/: CMakeLists.txt  IsoRoute_tests.cpp  PlugIn_Waypoint_mock.h  Position_tests.cpp  Position_tests.h  RoutePoint_tests.cpp  RoutePoint_tests.h  mock_plugin_api.h  mock_plugin_impl.c  mock_plugin_impl.cpp
